--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   </div>
 </body>
 <link rel="stylesheet/less" type="text/css" href="/theme.less" />
+<link rel="stylesheet/less" type="text/css" href="/theme.dark.less" />
 <script>
   window.less = {
     async: false,
