--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Pear Admin Ant</title>
 </head>
-
 <body>
-  <noscript>
-    We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-  </noscript>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
-
 </html>
